# src/app.js
@@ -11,6 +11,19 @@ const openapiDocument = YAML.load(
     path.join(__dirname, '../openapi/openapi.yaml')
 );
 
+const movies = [
+    {
+        id: 1,
+        title: 'Inception',
+        director: 'Christopher Nolan'
+    },
+    {
+        id: 2,
+        title: 'Interstellar',
+        director: 'Christopher Nolan'
+    }
+];
+
 app.get('/', (req, res) => {
     res.status(200).json({
         message: 'API funcionando correctamente'
@@ -18,18 +31,20 @@ app.get('/', (req, res) => {
 });
 
 app.get('/movies', (req, res) => {
-    res.status(200).json([
-        {
-            id: 1,
-            title: 'Inception',
-            director: 'Christopher Nolan'
-        },
-        {
-            id: 2,
-            title: 'Interstellar',
-            director: 'Christopher Nolan'
-        }
-    ]);
+    res.status(200).json(movies);
+});
+
+app.get('/movies/:id', (req, res) => {
+    const movieId = Number(req.params.id);
+    const movie = movies.find((m) => m.id === movieId);
+
+    if (!movie) {
+        return res.status(404).json({
+            error: 'Película no encontrada'
+        });
+    }
+
+    res.status(200).json(movie);
 });
 
 app.use('/docs', swaggerUi.serve, swaggerUi.setup(openapiDocument));
